<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/barcode_scanner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        android:layout_alignParentTop="true">

    </com.journeyapps.barcodescanner.DecoratedBarcodeView>

    <TextView
        style="@style/roboto_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_carnet"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:paddingTop="23dp"
        android:textSize="17sp" />

    <RelativeLayout
        android:id="@+id/scan_label_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:minHeight="140dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/dni_insert_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@color/white"
                android:clickable="true"
                android:gravity="center"
                android:paddingTop="17dp"
                android:paddingBottom="17dp"
                android:paddingLeft="23dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_dni"
                    style="@style/DniEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:minWidth="251dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@drawable/textview_input_dni_background"
                    android:hint="@string/dni"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:maxLines="1"/>

                <ImageButton
                    android:id="@+id/accept_dni"
                    android:layout_width="54dp"
                    android:layout_height="45dp"
                    android:layout_marginRight= "23dp"
                    android:layout_marginLeft="9dp"
                    android:src="@drawable/group_enter"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/scan_capture_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:minHeight="60dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@drawable/button_scan_red_background"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/scan_button"
                    style="@style/roboto_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <include
        android:id="@+id/progress_overlay"
        android:visibility="gone"
        layout="@layout/progress_overlay" />

</RelativeLayout>