<?xml version="1.0" encoding="utf-8"?>
<com.inkafarma.dispatcher.view.widget.LinearLayoutThatDetectsSoftKeyboard
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true">

    <requestFocus/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:clipToPadding="false"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_title"
            android:layout_width="133dp"
            android:layout_height="19dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/group_3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_login_fields"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_gravity="center_vertical|center_horizontal"
                app:errorTextAppearance="@style/ErrorAppearanceText"
                app:hintTextAppearance="@style/FloatingHintText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_email"
                    style="@style/LoginEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/stroke_gray_line"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_gravity="center_vertical|center_horizontal"
                app:errorTextAppearance="@style/ErrorAppearanceText"
                app:hintTextAppearance="@style/FloatingHintText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_password"
                    style="@style/LoginEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/progress_overlay"
        layout="@layout/progress_overlay"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_sign_in"
        style="@style/roboto_regular"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_orange_disabled_background"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_version_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="@style/FloatingHintText"
        android:paddingRight="10dp"
        android:paddingBottom="6dp"
        android:textAlignment="textEnd"/>

</com.inkafarma.dispatcher.view.widget.LinearLayoutThatDetectsSoftKeyboard>
