<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/scan_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"

                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@color/toolbar_grey_color"
                        android:theme="@style/ToolbarDashboardTheme"
                        app:layout_scrollFlags="scroll|enterAlways" />

                    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:id="@+id/scan_capture"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/colorPrimary">

                        <ImageView
                            android:id="@+id/image_back"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_marginLeft="17dp"
                            android:layout_marginTop="11dp"
                            android:src="@drawable/back" />

                        <FrameLayout
                            android:id="@+id/frame_scan"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center">

                            <ImageView
                                android:id="@+id/image_background_scan"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="28dp"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:src="@drawable/bar_code_orange" />

                            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                android:id="@+id/layout_scan"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:visibility="gone">

                                <com.journeyapps.barcodescanner.DecoratedBarcodeView
                                    android:id="@+id/barcode_scanner"
                                    android:layout_width="match_parent"
                                    android:layout_height="280dp"
                                    android:layout_alignParentTop="true">

                                </com.journeyapps.barcodescanner.DecoratedBarcodeView>

                            </RelativeLayout>
                        </FrameLayout>

                        <TextView
                            android:id="@+id/textView_state_scan_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="11dp"
                            android:maxLines="2"
                            android:text="@string/name_motorized"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            tools:text="Pedidos para: \n Rodrigo Fernandez" />

                    </RelativeLayout>

                </RelativeLayout>

            </android.support.design.widget.AppBarLayout>

            <TextView
                style="@style/roboto_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:minWidth="75dp"
                android:paddingBottom="9dp"
                android:paddingLeft="6dp"
                android:paddingTop="9dp"
                android:text="@string/dashboard_dispatcher"
                android:textAllCaps="true"
                android:textColor="@color/text_gray"
                android:textSize="14sp" />

            <ScrollView
                android:id="@+id/sv_order_motorized"
                android:layout_width="fill_parent"
                android:layout_height="316dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recyclerView_orders"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:id="@+id/ll_not_order_motorized"
                android:layout_width="match_parent"
                android:layout_height="344dp"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_background_not_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="111dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:src="@drawable/group_6" />

                <TextView
                    style="@style/roboto_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:minWidth="75dp"
                    android:paddingBottom="9dp"
                    android:paddingLeft="6dp"
                    android:paddingTop="9dp"
                    android:textAlignment="center"
                    android:text="@string/message_not_order"
                    android:textColor="@color/text_gray"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scan_label_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/scan_information"
            android:background="@color/background_color_card_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:clickable="true"
                android:minHeight="60dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/scan_capture_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:background="@drawable/button_green_background"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/scan_button"
                        style="@style/roboto_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/start_scan"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <include
        android:id="@+id/progress_overlay"
        layout="@layout/progress_overlay"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>